<resources>
    <string name="app_name">Android men seeker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_android_men_seeker">Welcome to Android men seeker</string>
    <string name="author_info"><![CDATA[By: Shuai Li ]]></string>
    <string name="skip">Skip</string>
    <string name="play_game">Play Game</string>
    <string name="help">Help</string>
    <string name="Menu">Menu</string>
    <string name="num_of_game">Num of Game:</string>
    <string name="num_of_mine">intruders Found:</string>
    <string name="game_played">Game played:</string>
    <string name="scans">Scans:</string>
    <string name="total_num">Total Intruders:</string>
    <string name="txt_dialog">Congratulations! You prevent Android eat Apple</string>
    <string name="setting">Setting</string>
    <string name="please_choose_the_number_of_mines">Please choose the number of mines:</string>
    <string name="clear_game_history">Clear Game History</string>
    <string name="please_choose_the_gameboard_size">Please choose the GameBoard Size</string>
    <string name="gameBoard_size">GameBoard Size:</string>
    <string name="mines_number">Mines number:</string>
    <string name="notice_info">
        Please choose the game size and number of mines.
        Please choose the game size and number of mines.
        Please choose the game size and number of mines.</string>

    <string name="about_game"> About Game
        \nThe Android company sent some spies to the Apple research center for stealing a new IOS upgrading plan. Hence, you got a job from Tim to find those spies and protect the new plan!
        \nAfter starting the game, you should find Android men (spy) by clicking those little blocks.Those Android men hide in those blocks. To win the game, you should find them all.
        \nAfter each clicking those blocks, you might find the target or get information about the number of spies on the row and column.
        \nHowever, your every scanning will be recorded. You should take the least scan and win the game.
        \nGood luck and enjoy the game ！
    </string>


    <string name="about_author">About the Author
        \n
        \nThis game is developed by Shuai Li (Isaac lee)
        \n
        \n
        \nAbout the course
        \n
        \nFind more information on the website:
        \nhttps://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home
    </string>


    <string name="reference_i">Reference Image
    \neat_apple
    \nhttps://tariqazam.wixsite.com/wwwcheapandroidinfo
    \neat_apple2
    \nhttps://zhuanlan.zhihu.com/c_1068541107364933632
    \nandroidMan
    \nhttps://medium.com/the-android-guy
    \nandroid_man3
    \nhttps://grabcad.com/library/beach-android-man-1
    \napple_company_main
    \nhttps://www.startingbusiness.com/blog/business-strategy-apple
    \napple_company_main
    \nhttps://sites.google.com/site/applecompany121/home/basic-information
    \ntim_cook_help
    \nhttps://www.theverge.com/2019/12/17/21026112/apple-tim-cook-iphone-watch-tv-decade-blockbusters-walt-mossberg



    </string>
    <string name="reference_c">Reference Code
    \n
    \nAnimation for welcome screen and mine button being clicked inspired by
    \nhttps://www.bilibili.com/video/BV1Rt411e76H?p=41
    \nhttps://www.youtube.com/watch?v=goVoYf2qie0&amp;ab_channel=CoderScionMedia
    \n
    \n
    \ncontrol 2D array inspired by https://www.cnblogs.com/thomasbc/p/6907573.html


    </string>


</resources>