<?xml version="1.0" encoding="utf-8"?><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tim_cook_help">

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:paddingBottom="5dp"
        android:text="@string/help"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="italic" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_help">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_game_info"
                android:layout_width="620dp"
                android:layout_height="270dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/game_board_boundary"
                android:paddingLeft="20sp"
                android:paddingTop="5dp"
                android:text="@string/about_game"
                android:textAllCaps="false"
                android:textColor="#FF0117"
                android:textSize="18dp">

            </TextView>


            <TextView
                android:id="@+id/tv_author_info"
                android:layout_width="620dp"
                android:layout_height="270dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/game_board_boundary"
                android:paddingLeft="20sp"
                android:paddingTop="5dp"
                android:text="@string/about_author"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:autoLink="web"/>

            <TextView
                android:id="@+id/tv_reference_i"
                android:layout_width="620dp"
                android:layout_height="270dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/game_board_boundary"
                android:paddingLeft="20sp"
                android:paddingTop="5dp"
                android:text="@string/reference_i"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:autoLink="web"/>

            <TextView
                android:id="@+id/tv_reference_c"
                android:layout_width="620dp"
                android:layout_height="270dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/game_board_boundary"
                android:paddingLeft="20sp"
                android:paddingTop="5dp"
                android:text="@string/reference_c"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:autoLink="web"/>




        </LinearLayout>

    </HorizontalScrollView>


</RelativeLayout>

    <!--</ScrollView>-->