<?xml version="1.0" encoding="utf-8"?><!--Citation:Button setting learned from https://www.bilibili.com/video/BV1Rt411e76H?p=6-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/apple_background_game"
    android:padding="15dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_play"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/btn_clicked"
            android:drawableStart="@drawable/ic_game"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/play_game"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@id/btn_play"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_clicked"
            android:drawableStart="@drawable/ic_setting"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@id/btn_setting"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_clicked"
            android:drawableStart="@drawable/ic_help"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/help"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btn_play"
            android:layout_alignEnd="@+id/btn_play"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"

            android:layout_marginTop="27dp"
            android:layout_marginEnd="27dp"
            android:text="@string/Menu"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_eat_apple"
            android:layout_width="195dp"
            android:layout_height="171dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="42dp"
            android:background="@drawable/eat_apple" />


    </RelativeLayout>


</LinearLayout>